--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,5 +1,5 @@
 .heading2X1 {
-	font-size: 2.5rem;
+	font-size: 2.1rem;
 	line-height: 1.2;
 	font-weight: 800;
 	letter-spacing: -0.05rem;
@@ -49,4 +49,38 @@
 
 .lightText {
 	color: #777;
+}
+
+.front {
+	position: relative;
+	z-index: 1;
+}
+
+.customShapeDividerTop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	overflow: hidden;
+	line-height: 0;
+}
+
+.customShapeDividerTop svg {
+	position: relative;
+	display: block;
+	width: calc(110% + 1.3px);
+	height: 165px;
+	transform: rotateY(180deg);
+}
+
+.customShapeDividerTop .shapeFill {
+	fill: #C69B7B;
+}
+
+/** For tablet devices **/
+@media (min-width: 768px) and (max-width: 1023px) {
+	.customShapeDividerTop	svg	{
+		width:	calc(169%	+	1.3px);
+		height:	65px;
+	}
 }
